--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
     <div class="wrap">
@@ -17,7 +20,7 @@
                 </h1>   
                 <nav>
                 <ul class="gnb clearfix">
-                    <li><a href="#">BRANDING</a></li>
+                    <li><a href="https://park-seona.github.io/Branding/">BRANDING</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">PORTPOLIO</a></li>
                     <li><a href="#">PROCESS</a></li>
