--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
         <header>
             <div class="header_box">
                 <h1>
-                    <a href="#">
+                    <a href="https://park-seona.github.io/Main/">
                         <img src="images/세잎 찐이야.png" alt="로고이미지">
                     </a>
                 </h1>   
                 <nav>
                 <ul class="gnb clearfix">
                     <li><a href="https://park-seona.github.io/Branding/">BRANDING</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">PORTPOLIO</a></li>
-                    <li><a href="#">PROCESS</a></li>
-                    <li><a href="#">EXPERIENCE</a></li>
+                    <li><a href="https://park-seona.github.io/About-me/">ABOUT</a></li>
+                    <li><a href="https://park-seona.github.io/Portpolio/">PORTFOLIO</a></li>
+                    <li><a href="https://park-seona.github.io/Process/">PROCESS</a></li>
+                    <li><a href="https://park-seona.github.io/Experience/">EXPERIENCE</a></li>
                 </ul>
                 </nav>
             </div>
