--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                     <li><a href="https://park-seona.github.io/Experience/">EXPERIENCE</a></li>
                 </ul>
                 </nav>
+                <div class="main_img">
+                    <img src="images/me.jpg" alt="독사진">
+                </div>
+                <div class="green_box"></div>
             </div>
         </header>
     </div>
