--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/script.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 <body>
+    <script>
+        AOS.init();
+    </script>
     <div class="wrap">
         <header>
             <div class="header_box">
@@ -30,7 +35,16 @@
                 <div class="main_img">
                     <img src="images/me.jpg" alt="독사진">
                 </div>
-                <div class="green_box"></div>
+                <div class="green_box">
+                    <li>
+                        I can do it,
+                        <br>enjoying new challenge
+                        <p>
+                            언제나 새로운 도전을 즐기는 신입 디자이너 박선아입니다.
+                            <br>매사에 할 수 있다라는 마음가짐으로 열심히 임하겠습니다.
+                        </p>
+                    </li>
+                </div>
             </div>
         </header>
     </div>
