--- a/index.html
+++ b/index.html
@@ -36,14 +36,17 @@
                     <img src="images/me.jpg" alt="독사진">
                 </div>
                 <div class="green_box">
+                    <div class="leaf_img">
+                        <img src="images/세잎-타이핑.png" alt="타이핑이미지">
+                    </div>
                     <li>
-                        I can do it,
-                        <br>enjoying new challenge
-                        <p>
-                            언제나 새로운 도전을 즐기는 신입 디자이너 박선아입니다.
-                            <br>매사에 할 수 있다라는 마음가짐으로 열심히 임하겠습니다.
-                        </p>
+                        I can do it.
                     </li>
+                    <p>
+                        언제나 새로운 도전을 즐기는 신입 디자이너 박선아입니다.
+                        <br>매사에 할 수 있다라는 마음가짐으로 열정있게 나아가겠습니다.
+                        <br>"Every Day Can do"
+                    </p>
                 </div>
             </div>
         </header>
