--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/script.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=Libre+Barcode+39+Text&display=swap" rel="stylesheet">
 </head>
 <body>
     <script>
@@ -33,20 +34,23 @@
                 </ul>
                 </nav>
                 <div class="main_img">
-                    <img src="images/me.jpg" alt="독사진">
+                    <img src="images/me.png" alt="독사진">
                 </div>
                 <div class="green_box">
-                    <div class="leaf_img">
-                        <img src="images/세잎-타이핑.png" alt="타이핑이미지">
-                    </div>
                     <li>
                         I can do it.
                     </li>
                     <p>
                         언제나 새로운 도전을 즐기는 신입 디자이너 박선아입니다.
                         <br>매사에 할 수 있다라는 마음가짐으로 열정있게 나아가겠습니다.
-                        <br>"Every Day Can do"
                     </p>
+                </div>
+
+                <a href="#" onclick="window.open('https://park-seona.github.io/Process/')" class="process_btn">View Process</a>
+                <a href="#" onclick="window.open('https://park-seona.github.io/Portpolio/')" class="port_btn">View Portfolio</a>
+                
+                <div class="barcode_txt">
+                    <li>Parkseona</li>
                 </div>
             </div>
         </header>
