--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="green_box">
                     <li>
-                        I can do it.
+                        I can do it
                     </li>
                     <p>
                         언제나 새로운 도전을 즐기는 신입 디자이너 박선아입니다.
