--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=Libre+Barcode+39+Text&display=swap" rel="stylesheet">
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/script.js"></script>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Barcode+128+Text&family=Libre+Barcode+39+Text&display=swap" rel="stylesheet">
 </head>
 <body>
     <script>
@@ -21,7 +21,7 @@
             <div class="header_box">
                 <h1>
                     <a href="https://park-seona.github.io/Main/">
-                        <img src="images/세잎 찐이야.png" alt="로고이미지">
+                        <img src="images/logo.png" alt="로고">
                     </a>
                 </h1>   
                 <nav>
@@ -41,7 +41,7 @@
                         I can do it
                     </li>
                     <p>
-                        언제나 새로운 도전을 즐기는 신입 디자이너 박선아입니다.
+                        언제나 새로운 도전을 즐기는 디자이너 박선아입니다.
                         <br>매사에 할 수 있다라는 마음가짐으로 열정 있게 나아가겠습니다.
                     </p>
                 </div>
